# Browsex

./: .gitignore  CHANGELOG.md  CROSS_PLATFORM_DPAPI.md  INSTALL_LINUX.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
browsex/: __init__.py  models.py
browsex/browsers/: __init__.py  brave.py  chrome.py  chromium.py  edge.py  firefox.py  opera.py
browsex/cli/: main.py
browsex/crypto/: __init__.py
browsex/crypto/os_crypt/: __init__.py  dpapi.py  keychain.py
browsex/utils/: __init__.py  file_finder.py
browspass/: __init__.py  models.py
browspass/browsers/: brave.py  chrome.py  chromium.py  edge.py  firefox.py  opera.py
browspass/cli/: main.py
browspass/crypto/: nss_crypto.py
browspass/crypto/os_crypt/: __init__.py  dpapi.py  linux_keyring.py
browspass/utils/: __init__.py
examples/: README.md  advanced_usage.py  basic_usage.py
tests/unit/: test_file_discovery.py  test_nss_crypto.py  test_profile_validation.py
